Change Java version to 25 and refactor AppConfig to use virtual thread executor.